--- a/SimpleController/src/main/webapp/css/style.css
+++ b/SimpleController/src/main/webapp/css/style.css
@@ -6,3 +6,7 @@
     --gray: gray;
 }
 body {font-family: "Montserrat","Noto Sans KR", sans-serif;line-height: 1.6;}
+
+.page {
+    margin: 0 auto;
+}
